Removed extra spacing from time format in Time Picker.  Fixed tests.

--- a/sass/controls/_timepicker.scss
+++ b/sass/controls/_timepicker.scss
@@ -11,6 +11,7 @@
     margin-left: -30px;
     margin-top: 9px;
     position: absolute;
+    @include css3(user-select, none);
 
     &:hover {
       fill: #666666;
